syntax = "proto3";

option csharp_namespace = "BL.gRPC";

service Storage {
	rpc Store (StoreRequest) returns (StoreResponse);
	rpc Withdraw (WithdrawRequest) returns (WithdrawResponse);
}

message StoreRequest {
	uint32 amount = 1;
}

message WithdrawRequest {
	uint32 amount = 1;
}

message WithdrawResponse {
	ResultMessage result = 1;
}

message StoreResponse {
	ResultMessage result = 1;
}

message ResultMessage {
	repeated string errors = 1;
}